--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="mystyle.css" />
-    
     <title>CS6017 HW7</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <script type="module" src="./d3.js"></script>
     <div id="main">
-      <div id="nbaplayers">
-
-      </div>
-
-      <div id="visHolder">
-        <svg id="canvas">
-
-        </svg>
-        <svg id="timeline">
-
-        </svg>
-      </div>
+        <div id="nbaplayers"></div>
+        <div id="visHolder">
+            <svg id="canvas"></svg>
+            <svg id="timeline"></svg>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
