--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="nbaplayers"></div>
         <div id="visHolder">
             <svg id="canvas"></svg>
-            <svg id="timeline"></svg>
+            <div id="country"></div>
         </div>
     </div>
 </body>
